Fixed issue of initial cards not showing up.

--- a/web/src/Board/index.css
+++ b/web/src/Board/index.css
@@ -203,7 +203,7 @@ ul {
   background: green;
   color: white;
   border-radius: 100%;
-  font-size: 15px;
+  font-size: 14px;
   text-align: center;
   text-decoration: none;
   line-height: 50px;
@@ -222,7 +222,7 @@ ul {
   background: #D43A2F;
   color: white;
   border-radius: 100%;
-  font-size: 15px;
+  font-size: 14px;
   text-align: center;
   text-decoration: none;
   line-height: 50px;
@@ -241,7 +241,7 @@ ul {
   background: #D43A2F;
   color: white;
   border-radius: 100%;
-  font-size: 15px;
+  font-size: 14px;
   text-align: center;
   text-decoration: none;
   line-height: 50px;
